[package]
name = "rigcycle"
version = "0.1.0"
authors = ["David Ricciardi <nricciar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
serde_derive = "1"
clap = "2.33.0"
please-clap = "0.1.0"
shellexpand = "2.0.0"