[package]
name = "rigcycle"
version = "0.1.0"
authors = ["David Ricciardi <nricciar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
serde_derive = "1"
clap = "2.33.0"
please-clap = "0.1.0"
shellexpand = "2.0.0"
ws = "0.9.1"
portaudio = "0.7.0"
hound = "3.4"
ham-rs = { git = "https://github.com/nricciar/ham-rs", branch = "pre-release" }
websocket = "0.24.0"
native-tls = "0.2.4"
tokio = { version = "0.2", features = ["fs", "io-util", "stream", "sync", "time","macros"] }
tokio-util = { version = "0.3.0" }
futures = "0.3.0"
rpassword = "4.0.5"